dev/logos/ingress/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.org/rewrites: "serviceName=envoy-service rewrite=/"
    nginx.org/websocket-services: "client-service"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.logos.dev
      secretName: logos-ingress-cert
  defaultBackend:
    service:
      name: client-service
      port:
        number: 8080
  rules:
    - host: example.logos.dev
      http:
        paths:
          - path: /services/
            pathType: Prefix
            backend:
              service:
                name: envoy-service
                port:
                  number: 8081
